# protodoc-cmake-example

./: .gitmodules  CMakeLists.txt  index.html
schema/: CMakeLists.txt  schema_list.txt
schema_doc/: CMakeLists.txt  lang_en.json  protodoc.json
schema_doc/docs/: main.adoc
